@@ -1,6 +1,6 @@
 url;file;result;test
--;-;-;freeRouter v25.9.26-cur, done by sprscc13@mrn0b0dy.
--;-;-;2025-09-26 22:06:39, took 00:13:50, with 50 workers, on 4038 cases, 0 failed, 0 traces, 0 retries
+-;-;-;freeRouter v25.9.27-cur, done by sprscc13@mrn0b0dy.
+-;-;-;2025-09-27 05:12:55, took 00:14:59, with 50 workers, on 4038 cases, 0 failed, 0 traces, 3 retries
 -;-;-;./rtr.bin, null
 http://sources.freertr.org/cfg/basic01.tst;basic01.tst;success;dummy test
 http://sources.freertr.org/cfg/basic02.tst;basic02.tst;success;interface with slot
