@@ -4054,7 +4054,6 @@ todo: server transproxy but with some protocols rewritten, the choice of the use
 todo: ctrl+l/r to try to redetect the screen resolution
 todo: some more autocolorizers under the same termial propertiles like terminal colorize mains subs etc
 todo: configure diff to have chance to change the sho config-differences
-todo: configure startup to have config committed but 4 now, only conf start tabbable stuffs
 todo: server security to have settable tls version from client knob first
 todo: server security to log the transactions
 todo: server security to stick to the good protocols
@@ -4095,7 +4094,6 @@ todo: test todo knob as an editor but in the running-config
 todo: inter xxx / macrandomize
 todo: server security maximum pendings as access-security
 todo: servers to have access-aaa
-todo: config committed with check for saved and backup config
 todo: interface lo0 as lo-core, persistently
 todo: bgp to have xr-alike neighbor/template statements with upgrade-cli
 todo: rework snmp to use sensors
