@@ -9,8 +9,8 @@
 .bad { color: red }
 </style>
 <title>tester</title></head><body>
-release: freeRouter v25.9.26-cur, done by sprscc13@mrn0b0dy.<br/>
-tested: 2025-09-26 22:06:39, took 00:13:50, with 50 workers, on 4038 cases, 0 failed, 0 traces, 0 retries<br/>
+release: freeRouter v25.9.27-cur, done by sprscc13@mrn0b0dy.<br/>
+tested: 2025-09-27 05:12:55, took 00:14:59, with 50 workers, on 4038 cases, 0 failed, 0 traces, 3 retries<br/>
 jvm: ./rtr.bin, other: null<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
