@@ -1,6 +1,6 @@
 url;file;result;test
--;-;-;freeRouter v25.9.26-cur, done by sprscc13@mrn0b0dy.
--;-;-;2025-09-26 22:21:56, took 00:14:47, with 50 workers, on 844 cases, 0 failed, 0 traces, 2 retries
+-;-;-;freeRouter v25.9.27-cur, done by sprscc13@mrn0b0dy.
+-;-;-;2025-09-27 05:28:58, took 00:15:33, with 50 workers, on 844 cases, 0 failed, 0 traces, 0 retries
 -;-;-;./rtr.bin, udp
 http://sources.freertr.org/cfg/p4lang-acl001.tst;p4lang-acl001.tst;success;p4lang: copp
 http://sources.freertr.org/cfg/p4lang-acl002.tst;p4lang-acl002.tst;success;p4lang: ingress access list
