@@ -9,8 +9,8 @@
 .bad { color: red }
 </style>
 <title>tester</title></head><body>
-release: freeRouter v25.9.26-cur, done by sprscc13@mrn0b0dy.<br/>
-tested: 2025-09-26 22:21:56, took 00:14:47, with 50 workers, on 844 cases, 0 failed, 0 traces, 2 retries<br/>
+release: freeRouter v25.9.27-cur, done by sprscc13@mrn0b0dy.<br/>
+tested: 2025-09-27 05:28:58, took 00:15:33, with 50 workers, on 844 cases, 0 failed, 0 traces, 0 retries<br/>
 jvm: ./rtr.bin, other: udp<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
