@@ -17530,3 +17530,6 @@ no failed: wireguard over ipv4
 qc pass: wireguard over ipv4
 ---------------------------------- 2025-09-22 00:11:28 25.9.22
 no todo: terminal clear same as game clear
+---------------------------------- 2025-09-27 04:57:55 25.9.27
+no todo: config committed with check for saved and backup config
+no todo: configure startup to have config committed but 4 now, only conf start tabbable stuffs
